VT issue 16 - Fixed Safari labels overlapping

--- a/scripts/components/Shared/NavigationButtonLabel.scss
+++ b/scripts/components/Shared/NavigationButtonLabel.scss
@@ -159,6 +159,7 @@ $arrowDownTop: calc(-50% + 1px);
       display: -webkit-box;
       -webkit-line-clamp: 2;
       -webkit-box-orient: vertical;
+      height: 100%;
     }
   }
 
